tests/sksl/errors/PrototypeInFuncBody.glsl
### Compilation failed:

error: 2: expected ';', but found '('
error: 2: expected expression, but found ')'
2 errors
